edition = "2023";

package knetpb;

option go_package="github.com/iakud/krpc/knetpb";

enum Msg {
	INVALID = 0;
    OK = 1;
	ERROR = 2;
	HANDSHAKE = 3;
	PING = 4;
	PONG = 5;

	KICKED_OUT_NTF = 11;

	KICK_OUT = 12;
    USER_ONLINE = 13;
    USER_OFFLINE_NTF = 14;

	RESERVED_END = 100;
}

message Error {
	int32 Code = 1;
	string Message = 2;
}

message HandshakeRequest {
	uint64 Hash = 1;
}

message HandshakeReply {
}

message Ping {
}

message Pong {
}

message KickedOutNotify {
	string Message = 1;
}

message KickOutRequest {
	uint64 UserId = 1;
	uint64 UserConnId = 2;
	string Message = 3;
}

message KickOutReply {
}

message UserOnlineRequest {
	uint64 UserId = 1;
}

message UserOnlineReply {
}

message UserOfflineNotify {
	uint64 UserId = 1;
}